--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,26 +1,159 @@
 {
     "nav": {
-        "home": "Startseite",
-        "team": "Unser Team",
+        "home": "Home",
+        "team": "Team",
         "services": "Leistungen",
         "contact": "Kontakt"
     },
     "hero": {
-        "subtitle": "Wir beraten Sie individuell bei Ihren Gesundheitsfragen und begleiten Sie persönlich mit unserer langjähriger Fachkompetenz.",
-        "cta": "Termin buchen"
+        "subtitle": "Individuelle Therapie. Ganzheitlicher Ansatz. Nachhaltige Ergebnisse.",
+        "cta": "Jetzt anrufen"
     },
     "team": {
         "title": "Lerne unser Team kennen",
-        "subtitle": "Unser Ziel ist es, Ihren Gesundheitszustand mit Hilfe eines ganzheitlichen Ansatz langfristig zu verbessern."
+        "subtitle": "Unser Ziel ist es, Ihren Gesundheitszustand mit Hilfe eines ganzheitlichen Ansatz langfristig zu verbessern.",
+        "imageAlt": "Unser Team",
+        "members": {
+            "ingo": {
+                "name": "Ingo",
+                "role": "Geschäftsführer & Physiotherapeut",
+                "about": "Gründer der Praxis mit über 20 Jahren Berufserfahrung in Physiotherapie und manueller Therapie. Nach Tätigkeiten in verschiedenen Praxen im In- und Ausland liegt sein Fokus heute auf ganzheitlicher Behandlung, individueller Betreuung und nachhaltigen Therapieerfolgen."
+            },
+            "paul": {
+                "name": "Paul",
+                "role": "Physiotherapeut",
+                "about": "Physiotherapeut mit Erfahrung aus mehreren orthopädischen und sporttherapeutischen Praxen. Sein Schwerpunkt liegt auf aktiver Therapie, funktionellem Training und verständlicher Anleitung, damit Patientinnen und Patienten langfristig selbstständig bleiben."
+            },
+            "gilles": {
+                "name": "Gilles",
+                "role": "Physiotherapeut",
+                "about": "Ausgebildeter Physiotherapeut mit beruflicher Erfahrung in Rehabilitationszentren und ambulanten Praxen. Er arbeitet ruhig und präzise und legt großen Wert auf alltagstaugliche Lösungen sowie eine vertrauensvolle Zusammenarbeit."
+            }
+        }
     },
     "services": {
         "title": "Leistungen",
         "subtitle": "Hier finden Sie eine Übersicht zu unserem Angebot an Leistungen. Diese können Sie durch ein Rezept vom Arzt wahrnehmen, aber auch als Privatleistung.",
-        "effect": "Wirkung"
+        "meta": "Wirkung",
+        "items": {
+            "omt": {
+                "title": "Manuelle Therapie nach OMT",
+                "description": "Bei der Manuellen Therapie handelt es sich um eine mindestens 2-jährige Fortbildung für Physiotherapeuten. Fortgebildete Manualtherapeuten sind Spezialisten der Gelenkmechanik. Die Grundlage der Manuellen Therapie sind spezielle Handgrifftechniken und Mobilisationstechniken."
+            },
+            "stosswelle": {
+                "title": "Stoßwellentherapie",
+                "description": "Die Stoßwellentherapie ist eine moderne Behandlungsmethode, die bei Sehnen- und Muskelbeschwerden eingesetzt werden kann. Ziel ist es, Heilungsprozesse anzuregen, Schmerzen zu reduzieren und die Beweglichkeit zu verbessern."
+            },
+            "dry-needling": {
+                "title": "Dry Needling",
+                "description": "Dry Needling ist eine Technik zur Behandlung myofaszialer Triggerpunkte. Mit feinen Nadeln können Muskelverspannungen gelöst, Schmerzen reduziert und die Funktion der Muskulatur unterstützt werden."
+            },
+            "faszien": {
+                "title": "Faszientherapie",
+                "description": "Die Faszientherapie richtet sich auf das Bindegewebe (Faszien), um Spannungen zu lösen, die Beweglichkeit zu verbessern und Schmerzen zu reduzieren. Sie kann bei Verklebungen, Dysbalancen und Bewegungseinschränkungen unterstützen."
+            },
+            "ivrt": {
+                "title": "Schwindeltherapie nach IVRT (vestibuläre Rehabilitationstherapie)",
+                "description": "Die vestibuläre Rehabilitationstherapie (IVRT) ist ein gezieltes Trainingskonzept bei Schwindel und Gleichgewichtsstörungen. Durch spezielle Übungen können Stabilität, Orientierung und Sicherheit im Alltag verbessert werden."
+            },
+            "cmd": {
+                "title": "CMD (Craniomandibuläre Dysfunktion)",
+                "description": "Bei CMD können Beschwerden im Kiefergelenk, im Gesicht oder im Nacken auftreten. Die Therapie zielt darauf ab, muskuläre Spannungen zu reduzieren, das Kiefergelenk zu entlasten und die Funktion zu verbessern."
+            },
+            "lymph": {
+                "title": "Lymphdrainage",
+                "description": "Die manuelle Lymphdrainage ist eine sanfte Technik zur Unterstützung des Lymphabflusses. Sie kann bei Schwellungen und Ödemen helfen, das Gewebe entlasten und das Wohlbefinden verbessern."
+            },
+            "training": {
+                "title": "Trainingstherapie",
+                "description": "Trainingstherapie ist ein individuell abgestimmtes Übungsprogramm zur Verbesserung von Kraft, Ausdauer, Beweglichkeit und Koordination. Sie unterstützt Rehabilitation, Prävention und die langfristige Stabilisierung."
+            },
+            "fussreflex": {
+                "title": "Fußreflexologie",
+                "description": "Die Fußreflexologie arbeitet mit gezielten Griffen an Reflexzonen am Fuß. Sie kann entspannend wirken, die Körperwahrnehmung fördern und unterstützend bei Stress- und Spannungszuständen eingesetzt werden."
+            },
+            "physikalisch": {
+                "title": "Physikalische Therapie",
+                "description": "Unter physikalischer Therapie werden Anwendungen wie Wärme, Kälte, Elektrotherapie oder Ultraschall zusammengefasst. Je nach Beschwerdebild können diese Maßnahmen schmerzlindernd wirken und Heilungsprozesse unterstützen."
+            }
+        }
     },
     "reviews": {
         "title": "Rezensionen",
         "subtitle": "Hier sehen Sie ein paar unserer Rezensionen von Google.",
-        "cta": "Zu Google Rezensionen"
+        "cta": "Zu Google Rezensionen",
+        "items": {
+            "1": {
+                "text": "Ich bin seit Jahren hier in Behandlung. Ingo nimmt sich viel Zeit und geht ganzheitlich auf die Patientinnen ein, sehr kompetent, immer freundlich! Vielen Dank! Die Praxis ist sehr zu empfehlen! Solch kompetente und nette Therapeuten und Therapeutinnen sind schwer zu finden.",
+                "name": "Maria Louise"
+            },
+            "2": {
+                "text": "Ich bin seit etlichen Jahren in Behandlung bei dieser überaus kompetenten, freundlichen, immer hilfsbedürftigen und lösungsuchenden Truppe😀 Auch in Bezug auf meinen speziellen gesundheitlichen Fall,wird stets nach effizienten und auf mich zugeschnitte Lösungen und Behandlungsmodelle gesucht. Vielen Dank für eure super Arbeit😀",
+                "name": "Sabrina Gloden"
+            },
+            "3": {
+                "text": "(Übersetzt) Ich gehe seit zwei Wochen dorthin – und noch für längere Zeit, um wieder fit zu werden. Zwei qualifizierte Physiotherapeuten mit viel Know-how. Großzügige Räumlichkeiten, keine Kabinen, sondern einzelne Zimmer. Die technischen Geräte sind leistungsstark und auf dem neuesten Stand; eine effiziente Anwendung ist dank der Fachkenntnisse der Therapeuten garantiert.",
+                "name": "Marc Wagner"
+            }
+        }
+    },
+    "contact": {
+        "title": "Kontaktieren Sie uns",
+        "subtitle": "Jetzt Termin vereinbaren.",
+        "cta": "Termin buchen",
+        "openingHours": {
+            "title": "Öffnungszeiten",
+            "days": {
+                "monday": "Montag",
+                "tuesday": "Dienstag",
+                "wednesday": "Mittwoch",
+                "thursday": "Donnerstag",
+                "friday": "Freitag",
+                "weekend": "Wochenende"
+            },
+            "times": {
+                "mon": [
+                    "06.40 – 12.00 Uhr",
+                    "13.00 – 19.00 Uhr"
+                ],
+                "tue": [
+                    "06.40 – 12.00 Uhr",
+                    "13.00 – 19.00 Uhr"
+                ],
+                "wed": [
+                    "07.30 – 12.00 Uhr",
+                    "13.00 – 19.00 Uhr"
+                ],
+                "thu": [
+                    "06.40 – 12.00 Uhr",
+                    "13.00 – 19.00 Uhr"
+                ],
+                "fri": [
+                    "06.40 – 12.00 Uhr",
+                    "13.00 – 19.00 Uhr"
+                ],
+                "weekend": [
+                    "geschlossen"
+                ]
+            }
+        },
+        "phone": {
+            "title": "Telefon",
+            "hint": "Sollte niemand Ihren Anruf beantworten, hinterlassen Sie bitte Ihren Namen und Ihre Telefonnummer auf dem Anrufbeantworter."
+        },
+        "houseVisit": {
+            "title": "Hausbesuch",
+            "text": "Wenn ein Besuch in der Praxis aus unterschiedlichen Gründen nicht möglich ist, besteht die Möglichkeit zum Hausbesuch!"
+        },
+        "imageAlt": "Kontakt"
+    },
+    "footer": {
+        "name": "Kinésithérapie Ingo Pauls",
+        "address": {
+            "line1": "19, Rue Pierre Olinger",
+            "line2": "L-9264 Diekirch",
+            "line3": "Luxemburg"
+        },
+        "rights": "Alle Rechte vorbehalten."
     }
 }
