Update German localization for home navigation label

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -6,7 +6,7 @@
         }
     },
     "nav": {
-        "home": "Startseite",
+        "home": "Home",
         "team": "Team",
         "services": "Leistungen",
         "contact": "Kontakt"
