Update: revise service reviews for clarity and enhance layout responsiveness Refactor: Review text

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -133,16 +133,16 @@
         "cta": "Zu Google Rezensionen",
         "items": {
             "1": {
-                "text": "Ich bin seit Jahren hier in Behandlung. Ingo nimmt sich viel Zeit und geht ganzheitlich auf die Patientinnen ein, sehr kompetent, immer freundlich! Vielen Dank! Die Praxis ist sehr zu empfehlen! Solch kompetente und nette Therapeuten und Therapeutinnen sind schwer zu finden.",
-                "name": "Maria Louise"
+                "text": "Ich bin seit etlichen Jahren in Behandlung bei dieser überaus kompetenten, freundlichen, immer hilfsbedürftigen und lösungsuchenden Truppe😀 Auch in Bezug auf meinen speziellen gesundheitlichen Fall,wird stets nach effizienten und auf mich zugeschnitte Lösungen und Behandlungsmodelle gesucht. Vielen Dank für eure super Arbeit😀",
+                "name": "Sabrina G."
             },
             "2": {
-                "text": "Ich bin seit etlichen Jahren in Behandlung bei dieser überaus kompetenten, freundlichen, immer hilfsbedürftigen und lösungsuchenden Truppe😀 Auch in Bezug auf meinen speziellen gesundheitlichen Fall,wird stets nach effizienten und auf mich zugeschnitte Lösungen und Behandlungsmodelle gesucht. Vielen Dank für eure super Arbeit😀",
-                "name": "Sabrina Gloden"
+                "text": "(Übersetzt) Ich gehe seit zwei Wochen dorthin – und noch für längere Zeit, um wieder fit zu werden. Zwei qualifizierte Physiotherapeuten mit viel Know-how. Großzügige Räumlichkeiten, keine Kabinen, sondern einzelne Zimmer. Die technischen Geräte sind leistungsstark und auf dem neuesten Stand; eine effiziente Anwendung ist dank der Fachkenntnisse der Therapeuten garantiert.",
+                "name": "Marc W."
             },
             "3": {
-                "text": "(Übersetzt) Ich gehe seit zwei Wochen dorthin – und noch für längere Zeit, um wieder fit zu werden. Zwei qualifizierte Physiotherapeuten mit viel Know-how. Großzügige Räumlichkeiten, keine Kabinen, sondern einzelne Zimmer. Die technischen Geräte sind leistungsstark und auf dem neuesten Stand; eine effiziente Anwendung ist dank der Fachkenntnisse der Therapeuten garantiert.",
-                "name": "Marc Wagner"
+                "text": "Bin sehr zufrieden! Ingo Pauls und sein Mitarbeiter leisten hervorragende Arbeit und das mit viel Witz und Humor und Freundlichkeit! Freue mich schon auf ein Wiedersehen! Sehr kompetent!👍👍👍👍👍👍",
+                "name": "Mariette S."
             }
         }
     },
